--- a/CalculatorThreeoAPI/wwwroot/assets/style.css
+++ b/CalculatorThreeoAPI/wwwroot/assets/style.css
@@ -1,7 +1,56 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 .calculator {
+  padding: 1rem 2rem 1rem;
   display: flex;
   flex-direction: column;
   max-width: 180px;
+  margin: 5px auto;
+  border-radius: 5px;
+  border: 1px solid #bcbcbc;
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.55)
 }
 
 .buttons-grid {
@@ -12,7 +61,15 @@
 }
 
 input {
-  max-width: 180px;
+  margin: auto;
+  max-width: 160px;
+  outline: none;
+  padding: 4px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.3)
+
 }
 
 #input1 {
@@ -26,6 +83,8 @@ button {
 }
 
 #result {
-  margin-top: 5px;
+  margin-top: 10px;
   text-align: center;
+  min-height: 1rem;
+  font-size: 1rem;
 }
